src/grammaire/src/antlr/WhileParser.java
package antlr;
// $ANTLR 3.5.3 .\\src\\antlr\\While.g 2025-01-22 00:48:52

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class WhileParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMANDS", "CONS", "EXPRS", "FOR", 
		"FOREACH", "FUNCTION", "HD", "IF", "INPUTS", "LET", "LIST", "NIL", "NOP", 
		"OUTPUTS", "PROGRAM", "SYMB", "Symbol", "TL", "VARS", "Variable", "WHILE", 
		"WS", "'%'", "'('", "')'", "','", "':'", "':='", "';'", "'=?'", "'cons'", 
		"'do'", "'else'", "'fi'", "'for'", "'foreach'", "'function'", "'hd'", 
		"'if'", "'in'", "'list'", "'nil'", "'nop'", "'od'", "'read'", "'then'", 
		"'tl'", "'while'", "'write'"
	};
	public static final int EOF=-1;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int COMMANDS=4;
	public static final int CONS=5;
	public static final int EXPRS=6;
	public static final int FOR=7;
	public static final int FOREACH=8;
	public static final int FUNCTION=9;
	public static final int HD=10;
	public static final int IF=11;
	public static final int INPUTS=12;
	public static final int LET=13;
	public static final int LIST=14;
	public static final int NIL=15;
	public static final int NOP=16;
	public static final int OUTPUTS=17;
	public static final int PROGRAM=18;
	public static final int SYMB=19;
	public static final int Symbol=20;
	public static final int TL=21;
	public static final int VARS=22;
	public static final int Variable=23;
	public static final int WHILE=24;
	public static final int WS=25;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public WhileParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public WhileParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return WhileParser.tokenNames; }
	@Override public String getGrammarFileName() { return ".\\src\\antlr\\While.g"; }


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// .\\src\\antlr\\While.g:25:1: program : ( function )+ -> ^( PROGRAM ( function )+ ) ;
	public final WhileParser.program_return program() throws RecognitionException {
		WhileParser.program_return retval = new WhileParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope function1 =null;

		RewriteRuleSubtreeStream stream_function=new RewriteRuleSubtreeStream(adaptor,"rule function");

		try {
			// .\\src\\antlr\\While.g:25:9: ( ( function )+ -> ^( PROGRAM ( function )+ ) )
			// .\\src\\antlr\\While.g:25:11: ( function )+
			{
			// .\\src\\antlr\\While.g:25:11: ( function )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==40) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// .\\src\\antlr\\While.g:25:11: function
					{
					pushFollow(FOLLOW_function_in_program99);
					function1=function();
					state._fsp--;

					stream_function.add(function1.getTree());
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}


			// AST REWRITE
			// elements: function
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 25:21: -> ^( PROGRAM ( function )+ )
			{
				// .\\src\\antlr\\While.g:25:24: ^( PROGRAM ( function )+ )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROGRAM, "PROGRAM"), root_1);
				if ( !(stream_function.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_function.hasNext() ) {
					adaptor.addChild(root_1, stream_function.nextTree());
				}
				stream_function.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class function_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "function"
	// .\\src\\antlr\\While.g:27:1: function : 'function' Symbol ':' definition -> ^( FUNCTION Symbol definition ) ;
	public final WhileParser.function_return function() throws RecognitionException {
		WhileParser.function_return retval = new WhileParser.function_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal2=null;
		Token Symbol3=null;
		Token char_literal4=null;
		ParserRuleReturnScope definition5 =null;

		Object string_literal2_tree=null;
		Object Symbol3_tree=null;
		Object char_literal4_tree=null;
		RewriteRuleTokenStream stream_Symbol=new RewriteRuleTokenStream(adaptor,"token Symbol");
		RewriteRuleTokenStream stream_40=new RewriteRuleTokenStream(adaptor,"token 40");
		RewriteRuleTokenStream stream_30=new RewriteRuleTokenStream(adaptor,"token 30");
		RewriteRuleSubtreeStream stream_definition=new RewriteRuleSubtreeStream(adaptor,"rule definition");

		try {
			// .\\src\\antlr\\While.g:27:10: ( 'function' Symbol ':' definition -> ^( FUNCTION Symbol definition ) )
			// .\\src\\antlr\\While.g:27:12: 'function' Symbol ':' definition
			{
			string_literal2=(Token)match(input,40,FOLLOW_40_in_function117);  
			stream_40.add(string_literal2);

			Symbol3=(Token)match(input,Symbol,FOLLOW_Symbol_in_function119);  
			stream_Symbol.add(Symbol3);

			char_literal4=(Token)match(input,30,FOLLOW_30_in_function121);  
			stream_30.add(char_literal4);

			pushFollow(FOLLOW_definition_in_function123);
			definition5=definition();
			state._fsp--;

			stream_definition.add(definition5.getTree());

			// AST REWRITE
			// elements: definition, Symbol
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 27:45: -> ^( FUNCTION Symbol definition )
			{
				// .\\src\\antlr\\While.g:27:48: ^( FUNCTION Symbol definition )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FUNCTION, "FUNCTION"), root_1);
				adaptor.addChild(root_1, stream_Symbol.nextNode());
				adaptor.addChild(root_1, stream_definition.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "function"


	public static class definition_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "definition"
	// .\\src\\antlr\\While.g:29:1: definition : 'read' input '%' commands '%' 'write' output -> input commands output ;
	public final WhileParser.definition_return definition() throws RecognitionException {
		WhileParser.definition_return retval = new WhileParser.definition_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal6=null;
		Token char_literal8=null;
		Token char_literal10=null;
		Token string_literal11=null;
		ParserRuleReturnScope input7 =null;
		ParserRuleReturnScope commands9 =null;
		ParserRuleReturnScope output12 =null;

		Object string_literal6_tree=null;
		Object char_literal8_tree=null;
		Object char_literal10_tree=null;
		Object string_literal11_tree=null;
		RewriteRuleTokenStream stream_48=new RewriteRuleTokenStream(adaptor,"token 48");
		RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");
		RewriteRuleTokenStream stream_52=new RewriteRuleTokenStream(adaptor,"token 52");
		RewriteRuleSubtreeStream stream_output=new RewriteRuleSubtreeStream(adaptor,"rule output");
		RewriteRuleSubtreeStream stream_input=new RewriteRuleSubtreeStream(adaptor,"rule input");
		RewriteRuleSubtreeStream stream_commands=new RewriteRuleSubtreeStream(adaptor,"rule commands");

		try {
			// .\\src\\antlr\\While.g:29:12: ( 'read' input '%' commands '%' 'write' output -> input commands output )
			// .\\src\\antlr\\While.g:29:14: 'read' input '%' commands '%' 'write' output
			{
			string_literal6=(Token)match(input,48,FOLLOW_48_in_definition141);  
			stream_48.add(string_literal6);

			pushFollow(FOLLOW_input_in_definition143);
			input7=input();
			state._fsp--;

			stream_input.add(input7.getTree());
			char_literal8=(Token)match(input,26,FOLLOW_26_in_definition145);  
			stream_26.add(char_literal8);

			pushFollow(FOLLOW_commands_in_definition147);
			commands9=commands();
			state._fsp--;

			stream_commands.add(commands9.getTree());
			char_literal10=(Token)match(input,26,FOLLOW_26_in_definition149);  
			stream_26.add(char_literal10);

			string_literal11=(Token)match(input,52,FOLLOW_52_in_definition151);  
			stream_52.add(string_literal11);

			pushFollow(FOLLOW_output_in_definition153);
			output12=output();
			state._fsp--;

			stream_output.add(output12.getTree());

			// AST REWRITE
			// elements: input, commands, output
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 29:58: -> input commands output
			{
				adaptor.addChild(root_0, stream_input.nextTree());
				adaptor.addChild(root_0, stream_commands.nextTree());
				adaptor.addChild(root_0, stream_output.nextTree());
			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "definition"


	public static class input_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "input"
	// .\\src\\antlr\\While.g:32:1: input : inputSub -> inputSub ;
	public final WhileParser.input_return input() throws RecognitionException {
		WhileParser.input_return retval = new WhileParser.input_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope inputSub13 =null;

		RewriteRuleSubtreeStream stream_inputSub=new RewriteRuleSubtreeStream(adaptor,"rule inputSub");

		try {
			// .\\src\\antlr\\While.g:32:8: ( inputSub -> inputSub )
			// .\\src\\antlr\\While.g:32:10: inputSub
			{
			pushFollow(FOLLOW_inputSub_in_input170);
			inputSub13=inputSub();
			state._fsp--;

			stream_inputSub.add(inputSub13.getTree());

			// AST REWRITE
			// elements: inputSub
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 32:18: -> inputSub
			{
				adaptor.addChild(root_0, stream_inputSub.nextTree());
			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "input"


	public static class inputSub_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "inputSub"
	// .\\src\\antlr\\While.g:33:1: inputSub : ( Variable )? ( ',' Variable )* -> ^( INPUTS ( Variable )* ) ;
	public final WhileParser.inputSub_return inputSub() throws RecognitionException {
		WhileParser.inputSub_return retval = new WhileParser.inputSub_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token Variable14=null;
		Token char_literal15=null;
		Token Variable16=null;

		Object Variable14_tree=null;
		Object char_literal15_tree=null;
		Object Variable16_tree=null;
		RewriteRuleTokenStream stream_Variable=new RewriteRuleTokenStream(adaptor,"token Variable");
		RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");

		try {
			// .\\src\\antlr\\While.g:33:10: ( ( Variable )? ( ',' Variable )* -> ^( INPUTS ( Variable )* ) )
			// .\\src\\antlr\\While.g:33:12: ( Variable )? ( ',' Variable )*
			{
			// .\\src\\antlr\\While.g:33:12: ( Variable )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==Variable) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// .\\src\\antlr\\While.g:33:12: Variable
					{
					Variable14=(Token)match(input,Variable,FOLLOW_Variable_in_inputSub180);  
					stream_Variable.add(Variable14);

					}
					break;

			}

			// .\\src\\antlr\\While.g:33:22: ( ',' Variable )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==29) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// .\\src\\antlr\\While.g:33:23: ',' Variable
					{
					char_literal15=(Token)match(input,29,FOLLOW_29_in_inputSub184);  
					stream_29.add(char_literal15);

					Variable16=(Token)match(input,Variable,FOLLOW_Variable_in_inputSub186);  
					stream_Variable.add(Variable16);

					}
					break;

				default :
					break loop3;
				}
			}


			// AST REWRITE
			// elements: Variable
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 33:37: -> ^( INPUTS ( Variable )* )
			{
				// .\\src\\antlr\\While.g:33:40: ^( INPUTS ( Variable )* )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(INPUTS, "INPUTS"), root_1);
				// .\\src\\antlr\\While.g:33:49: ( Variable )*
				while ( stream_Variable.hasNext() ) {
					adaptor.addChild(root_1, stream_Variable.nextNode());
				}
				stream_Variable.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "inputSub"


	public static class output_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "output"
	// .\\src\\antlr\\While.g:36:1: output : Variable ( ',' Variable )* -> ^( OUTPUTS ( Variable )+ ) ;
	public final WhileParser.output_return output() throws RecognitionException {
		WhileParser.output_return retval = new WhileParser.output_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token Variable17=null;
		Token char_literal18=null;
		Token Variable19=null;

		Object Variable17_tree=null;
		Object char_literal18_tree=null;
		Object Variable19_tree=null;
		RewriteRuleTokenStream stream_Variable=new RewriteRuleTokenStream(adaptor,"token Variable");
		RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");

		try {
			// .\\src\\antlr\\While.g:36:8: ( Variable ( ',' Variable )* -> ^( OUTPUTS ( Variable )+ ) )
			// .\\src\\antlr\\While.g:36:9: Variable ( ',' Variable )*
			{
			Variable17=(Token)match(input,Variable,FOLLOW_Variable_in_output204);  
			stream_Variable.add(Variable17);

			// .\\src\\antlr\\While.g:36:18: ( ',' Variable )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==29) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// .\\src\\antlr\\While.g:36:19: ',' Variable
					{
					char_literal18=(Token)match(input,29,FOLLOW_29_in_output207);  
					stream_29.add(char_literal18);

					Variable19=(Token)match(input,Variable,FOLLOW_Variable_in_output209);  
					stream_Variable.add(Variable19);

					}
					break;

				default :
					break loop4;
				}
			}


			// AST REWRITE
			// elements: Variable
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 36:34: -> ^( OUTPUTS ( Variable )+ )
			{
				// .\\src\\antlr\\While.g:36:37: ^( OUTPUTS ( Variable )+ )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(OUTPUTS, "OUTPUTS"), root_1);
				if ( !(stream_Variable.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_Variable.hasNext() ) {
					adaptor.addChild(root_1, stream_Variable.nextNode());
				}
				stream_Variable.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "output"


	public static class commands_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "commands"
	// .\\src\\antlr\\While.g:39:1: commands : command ( ';' command )* -> ^( COMMANDS ( command )+ ) ;
	public final WhileParser.commands_return commands() throws RecognitionException {
		WhileParser.commands_return retval = new WhileParser.commands_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal21=null;
		ParserRuleReturnScope command20 =null;
		ParserRuleReturnScope command22 =null;

		Object char_literal21_tree=null;
		RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
		RewriteRuleSubtreeStream stream_command=new RewriteRuleSubtreeStream(adaptor,"rule command");

		try {
			// .\\src\\antlr\\While.g:39:10: ( command ( ';' command )* -> ^( COMMANDS ( command )+ ) )
			// .\\src\\antlr\\While.g:39:12: command ( ';' command )*
			{
			pushFollow(FOLLOW_command_in_commands229);
			command20=command();
			state._fsp--;

			stream_command.add(command20.getTree());
			// .\\src\\antlr\\While.g:39:20: ( ';' command )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==32) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// .\\src\\antlr\\While.g:39:21: ';' command
					{
					char_literal21=(Token)match(input,32,FOLLOW_32_in_commands232);  
					stream_32.add(char_literal21);

					pushFollow(FOLLOW_command_in_commands234);
					command22=command();
					state._fsp--;

					stream_command.add(command22.getTree());
					}
					break;

				default :
					break loop5;
				}
			}


			// AST REWRITE
			// elements: command
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 39:36: -> ^( COMMANDS ( command )+ )
			{
				// .\\src\\antlr\\While.g:39:39: ^( COMMANDS ( command )+ )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(COMMANDS, "COMMANDS"), root_1);
				if ( !(stream_command.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_command.hasNext() ) {
					adaptor.addChild(root_1, stream_command.nextTree());
				}
				stream_command.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "commands"


	public static class exprs_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "exprs"
	// .\\src\\antlr\\While.g:42:1: exprs : expression ( ',' expression )* -> ^( EXPRS ( expression )+ ) ;
	public final WhileParser.exprs_return exprs() throws RecognitionException {
		WhileParser.exprs_return retval = new WhileParser.exprs_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal24=null;
		ParserRuleReturnScope expression23 =null;
		ParserRuleReturnScope expression25 =null;

		Object char_literal24_tree=null;
		RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
		RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");

		try {
			// .\\src\\antlr\\While.g:42:7: ( expression ( ',' expression )* -> ^( EXPRS ( expression )+ ) )
			// .\\src\\antlr\\While.g:42:9: expression ( ',' expression )*
			{
			pushFollow(FOLLOW_expression_in_exprs255);
			expression23=expression();
			state._fsp--;

			stream_expression.add(expression23.getTree());
			// .\\src\\antlr\\While.g:42:20: ( ',' expression )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==29) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// .\\src\\antlr\\While.g:42:21: ',' expression
					{
					char_literal24=(Token)match(input,29,FOLLOW_29_in_exprs258);  
					stream_29.add(char_literal24);

					pushFollow(FOLLOW_expression_in_exprs260);
					expression25=expression();
					state._fsp--;

					stream_expression.add(expression25.getTree());
					}
					break;

				default :
					break loop6;
				}
			}


			// AST REWRITE
			// elements: expression
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 42:37: -> ^( EXPRS ( expression )+ )
			{
				// .\\src\\antlr\\While.g:42:40: ^( EXPRS ( expression )+ )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(EXPRS, "EXPRS"), root_1);
				if ( !(stream_expression.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_expression.hasNext() ) {
					adaptor.addChild(root_1, stream_expression.nextTree());
				}
				stream_expression.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "exprs"


	public static class vars_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "vars"
	// .\\src\\antlr\\While.g:44:1: vars : Variable ( ',' Variable )* -> ^( VARS ( Variable )+ ) ;
	public final WhileParser.vars_return vars() throws RecognitionException {
		WhileParser.vars_return retval = new WhileParser.vars_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token Variable26=null;
		Token char_literal27=null;
		Token Variable28=null;

		Object Variable26_tree=null;
		Object char_literal27_tree=null;
		Object Variable28_tree=null;
		RewriteRuleTokenStream stream_Variable=new RewriteRuleTokenStream(adaptor,"token Variable");
		RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");

		try {
			// .\\src\\antlr\\While.g:44:6: ( Variable ( ',' Variable )* -> ^( VARS ( Variable )+ ) )
			// .\\src\\antlr\\While.g:44:8: Variable ( ',' Variable )*
			{
			Variable26=(Token)match(input,Variable,FOLLOW_Variable_in_vars278);  
			stream_Variable.add(Variable26);

			// .\\src\\antlr\\While.g:44:17: ( ',' Variable )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==29) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// .\\src\\antlr\\While.g:44:18: ',' Variable
					{
					char_literal27=(Token)match(input,29,FOLLOW_29_in_vars281);  
					stream_29.add(char_literal27);

					Variable28=(Token)match(input,Variable,FOLLOW_Variable_in_vars283);  
					stream_Variable.add(Variable28);

					}
					break;

				default :
					break loop7;
				}
			}


			// AST REWRITE
			// elements: Variable
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 44:33: -> ^( VARS ( Variable )+ )
			{
				// .\\src\\antlr\\While.g:44:36: ^( VARS ( Variable )+ )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(VARS, "VARS"), root_1);
				if ( !(stream_Variable.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_Variable.hasNext() ) {
					adaptor.addChild(root_1, stream_Variable.nextNode());
				}
				stream_Variable.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
